# KC3-2026

./: .editorconfig  .env.example  .gitignore  .nvmrc  .prettierignore  .prettierrc  AI_CONTEXT.md  ARCHITECTURE.md  README.md  Taskfile.yml  app.json  babel.config.js  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.husky/: pre-commit  pre-push
app/: +not-found.tsx  _layout.tsx
app/(tabs)/: _layout.tsx  index.tsx  profile.tsx
backend/: .dockerignore  Dockerfile  init.sql  pyproject.toml  pytest.ini
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  user.py
backend/app/repositories/: __init__.py  base.py  user_repository.py
backend/app/routers/: health.py  users.py
backend/app/schemas/: __init__.py  user.py
backend/app/usecases/: __init__.py  base.py
backend/app/usecases/user/: __init__.py  create_user.py  delete_user.py  get_user.py  update_user.py
backend/scripts/: test-crud.sh
backend/tests/: conftest.py  test_users_crud.py
scripts/: check-branch-before-push.mjs  check-env.mjs  reset.mjs
src/components/: LightMeter.tsx
src/constants/: index.ts
src/features/auth/: LoginScreen.tsx  authStore.ts  index.ts
src/features/home/: HomeScreen.tsx  index.ts
src/features/light-sensor/: LightSensorScreen.tsx  constants.ts  index.ts
src/features/profile/: ProfileScreen.tsx  index.ts
src/screens/: HomeScreen.tsx
src/shared/components/: Button.tsx  index.ts
src/shared/constants/: index.ts
src/types/: index.ts
(+6 files in other folders)
