# pyproject.toml - Pythonのプロジェクト設定（pipの代わりにuvを使用）
# 依存ライブラリ（FastAPI, SQLAlchemy等）とバージョンを定義
# uv sync で依存をインストール

[project]
name = "sleepsupport-backend"
version = "0.1.0"
description = "SleepSupportApp バックエンドAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "greenlet>=3.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "supabase>=2.3.4",
    "python-dotenv>=1.0.1",
    "httpx>=0.24,<0.26",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8",
    "pytest-asyncio>=0.23.0",
]

